fixed text overflow issue

--- a/css_files/index.css
+++ b/css_files/index.css
@@ -1,9 +1,6 @@
 /** INDEX CSS **/
 
 /************************* MAIN STRUCTURE OF PAGE ***********************************/
-html{
-    height: ;
-}
 body{
     margin: 0;
     padding: 0;
@@ -120,7 +117,7 @@ ul {
     display: flex;
     float: right;
     transition: .5s;
-    z-index: 999;
+    z-index: 5;
 }
 
 ul li {
@@ -252,6 +249,11 @@ ul li a {
     }
     .main_body {
         height: 30em;
+        overflow: scroll;
+        overflow-x: hidden;
+    }
+    .calendar {
+        max-height: 30em;
     }
 }
 
